<resources>
    <string name="app_name">Park My Car</string>
    <string name="txt_welcome">Welcome to Park My Car</string>
    <string name="txt_app_description">Find and book the nearest parking in just a few simple clicks with Park My Car. Whether you’re staying for an hour or even for a day pre-book your space and take the hassle out of finding parking wherever your travels may take you.</string>
    <string name="txt_btn_learn_more">Learn More</string>
    <string name="txt_btn_sign_up">Sign Up</string>
    <string name="txt_username">USERNAME</string>
    <string name="txt_password">PASSWORD</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_email">EMAIL</string>
    <string name="txt_phone">PHONE</string>
    <string name="txt_vehicle_registration_number">REGISTRATION NO.</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_steps_of_booking">Follow these Five simple steps </string>
    <string name="txt_step1">Complete your registration with proper credentials</string>
    <string name="txt_step2">Login to your profile</string>
    <string name="txt_step3">Search for the nearest parking area</string>
    <string name="txt_step4">Check for available empty spots</string>
    <string name="txt_step5">Select any of the available spots according to your convenience</string>
    <string name="txt_step6">Proceed with booking</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="txt_btn_find_me_a_parking">Find me a parking</string>
    <string name="text_title_parking1">Parking 1</string>
    <string name="name_garuda_mall">name: Garuda Mall</string>
</resources>
