<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    tools:context="tanzeer.parkmycar.HowTo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/txt_steps_of_booking"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
            android:text="@string/txt_step1"
            android:textColor="@android:color/black"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step2"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step3"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step4"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step5"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_step6"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_play_arrow_black_24dp"/>
    </LinearLayout>

</LinearLayout>
